--- a/.github/workflows/scala_ci.yml
+++ b/.github/workflows/scala_ci.yml
@@ -29,18 +29,19 @@ jobs:
       with:
         repository: WissenIstNacht/Carbon
         path: carbon    
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+#     - name: Set up JDK 1.8
+#       uses: actions/setup-java@v1
+#       with:
+#         java-version: 1.8
 #     - name: Run Compilation  
 #       run: sbt assembly
 #     - name: Run Tests
 #       run: sbt test
     - name: print directory
       run: pwd > print_dir.txt | ls -R >> print_dir.txt | cat print_dir.txt
-    - name: Upload directory content printout
-      uses: actions/upload-artifact@v2
-      with:
-        name: directory_content_printout
-        path: ${{ github.workspace }}/print_dir.txt
+#       run: pwd > print_dir.txt | ls -R >> print_dir.txt | cat print_dir.txt
+#     - name: Upload directory content printout
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: directory_content_printout
+#         path: ${{ github.workspace }}/print_dir.txt
