--- a/.github/workflows/scala_ci.yml
+++ b/.github/workflows/scala_ci.yml
@@ -28,7 +28,17 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: WissenIstNacht/Carbon
-        path: carbon    
+        path: carbon
+    - name: Symbolically link silver to Carbon
+      run: cd carbon; ln --symbolic ../silver
+    - name: Symbolically link silver to Silicon
+      run: cd silicon; ln --symbolic ../silver
+    - name: Symbolically link silver to ViperServer
+      run: cd viperServer; ln --symbolic ../silver
+    - name: Symbolically link carbon to viperServer
+      run: cd carbon; ln --symbolic ../carbon
+    - name: Symbolically link silicon to viperServer
+      run: cd carbon; ln --symbolic ../silicon
 #     - name: Set up JDK 1.8
 #       uses: actions/setup-java@v1
 #       with:
