--- a/.github/workflows/scala_ci.yml
+++ b/.github/workflows/scala_ci.yml
@@ -39,12 +39,12 @@ jobs:
       run: cd viperServer; ln --symbolic ../carbon
     - name: Symbolically link silicon to viperServer
       run: cd viperServer; ln --symbolic ../silicon
-#     - name: Set up JDK 1.8
-#       uses: actions/setup-java@v1
-#       with:
-#         java-version: 1.8
-#     - name: Run Compilation  
-#       run: sbt assembly
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Run Compilation  
+      run: sbt assembly
 #     - name: Run Tests
 #       run: sbt test
     - name: print directory
