--- a/.github/workflows/scala_ci.yml
+++ b/.github/workflows/scala_ci.yml
@@ -29,23 +29,23 @@ jobs:
       with:
         repository: WissenIstNacht/Carbon
         path: carbon
-    - name: Symbolically link silver to Carbon
+    - name: Symbolically link Silver to Carbon
       run: cd carbon; ln --symbolic ../silver
-    - name: Symbolically link silver to Silicon
+    - name: Symbolically link Silver to Silicon
       run: cd silicon; ln --symbolic ../silver
-    - name: Symbolically link silver to ViperServer
+    - name: Symbolically link Silver to ViperServer
       run: cd viperServer; ln --symbolic ../silver
-    - name: Symbolically link carbon to viperServer
+    - name: Symbolically link Carbon to ViperServer
       run: cd viperServer; ln --symbolic ../carbon
-    - name: Symbolically link silicon to viperServer
+    - name: Symbolically link Silicon to ViperServer
       run: cd viperServer; ln --symbolic ../silicon
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Run Compilation  
-      run: sbt assembly
-#     - name: Run Tests
+    - name: Assemble project
+      run: cd viperServer; sbt assembly
+#     - name: test project
 #       run: sbt test
     - name: print directory
       run: pwd > print_dir.txt | ls --recursive >> print_dir.txt | cat print_dir.txt
