--- a/.github/workflows/scala_ci.yml
+++ b/.github/workflows/scala_ci.yml
@@ -14,39 +14,41 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: viperServer
-    - name: Checkout Silver
-      uses: actions/checkout@v2
-      with:
-        repository: WissenIstNacht/Silver
-        path: silver
-    - name: Checkout Silicon
-      uses: actions/checkout@v2
-      with:
-        repository: WissenIstNacht/Silicon
-        path: silicon
-    - name: Checkout Carbon
-      uses: actions/checkout@v2
-      with:
-        repository: WissenIstNacht/Carbon
-        path: carbon
-    - name: Symbolically link Silver to Carbon
-      run: cd carbon; ln --symbolic ../silver
-    - name: Symbolically link Silver to Silicon
-      run: cd silicon; ln --symbolic ../silver
-    - name: Symbolically link Silver to ViperServer
-      run: cd viperServer; ln --symbolic ../silver
-    - name: Symbolically link Carbon to ViperServer
-      run: cd viperServer; ln --symbolic ../carbon
-    - name: Symbolically link Silicon to ViperServer
-      run: cd viperServer; ln --symbolic ../silicon
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Assemble project
-      run: cd viperServer; sbt assembly
-    - name: test project
-      run: cd viperServer; sbt test
+#     - name: Checkout Silver
+#       uses: actions/checkout@v2
+#       with:
+#         repository: WissenIstNacht/Silver
+#         path: silver
+#     - name: Checkout Silicon
+#       uses: actions/checkout@v2
+#       with:
+#         repository: WissenIstNacht/Silicon
+#         path: silicon
+#     - name: Checkout Carbon
+#       uses: actions/checkout@v2
+#       with:
+#         repository: WissenIstNacht/Carbon
+#         path: carbon
+#     - name: Symbolically link Silver to Carbon
+#       run: cd carbon; ln --symbolic ../silver
+#     - name: Symbolically link Silver to Silicon
+#       run: cd silicon; ln --symbolic ../silver
+#     - name: Symbolically link Silver to ViperServer
+#       run: cd viperServer; ln --symbolic ../silver
+#     - name: Symbolically link Carbon to ViperServer
+#       run: cd viperServer; ln --symbolic ../carbon
+#     - name: Symbolically link Silicon to ViperServer
+#       run: cd viperServer; ln --symbolic ../silicon
+#     - name: Set up JDK 1.8
+#       uses: actions/setup-java@v1
+#       with:
+#         java-version: 1.8
+#     - name: Assemble project
+#       run: cd viperServer; sbt assembly
+    - name: Get z3
+      uses: Z3Prover/z3@z3-4.8.8
+#     - name: test project
+#       run: cd viperServer; sbt test
     - name: print directory
       run: pwd > print_dir.txt ; ls --recursive >> print_dir.txt ; cat print_dir.txt
     - name: Upload directory content printout
