--- a/.github/workflows/scala_ci.yml
+++ b/.github/workflows/scala_ci.yml
@@ -45,8 +45,8 @@ jobs:
 #         java-version: 1.8
 #     - name: Assemble project
 #       run: cd viperServer; sbt assembly
-    - name: Get z3
-      uses: Z3Prover/z3@z3-4.8.8
+    - name: Get Z3
+      run: sudo apt-get update -y; sudo apt-get install -y z3
 #     - name: test project
 #       run: cd viperServer; sbt test
     - name: print directory
