--- a/.github/workflows/scala_ci.yml
+++ b/.github/workflows/scala_ci.yml
@@ -29,6 +29,7 @@ jobs:
       with:
         repository: WissenIstNacht/Carbon
         path: carbon
+    
     - name: Symbolically link Silver to Carbon
       run: cd carbon; ln --symbolic ../silver
     - name: Symbolically link Silver to Silicon
@@ -39,23 +40,29 @@ jobs:
       run: cd viperServer; ln --symbolic ../carbon
     - name: Symbolically link Silicon to ViperServer
       run: cd viperServer; ln --symbolic ../silicon
+    
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Assemble project
-      run: cd viperServer; sbt assembly
+#     - name: Assemble project
+#       run: cd viperServer; sbt assembly
 #     - name: Upload assembled projected
 #       uses: actions/upload-artifact@v2
 #       with:
 #         name: viperServer_jar
 #         path: ./
+
     - name: Install Z3
       run: sudo apt-get update -y; sudo apt-get install -y z3; export Z3_EXE="/usr/bin/z3"
-    - name: test project
-      run: cd viperServer; sbt test
-    - name: print directory
-      run: pwd > print_dir.txt ; ls --recursive >> print_dir.txt ; cat print_dir.txt
+      
+#     - name: test project
+#       run: cd viperServer; sbt test
+      
+#     - name: print directory
+#       run: pwd > print_dir.txt ; ls --recursive >> print_dir.txt ; cat print_dir.txt
+    - name: print z3
+      run: env > print_dir.txt
     - name: Upload directory content printout
       uses: actions/upload-artifact@v2
       with:
