--- a/.github/workflows/scala_ci.yml
+++ b/.github/workflows/scala_ci.yml
@@ -41,26 +41,26 @@ jobs:
     - name: Symbolically link Silicon to ViperServer
       run: cd viperServer; ln --symbolic ../silicon
     
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Assemble project
-      run: cd viperServer; sbt assembly
+    - name: Install Z3
+      run: sudo apt-get update -y; sudo apt-get install -y z3=4.5.0;
+
+#     - name: Set up JDK 1.8
+#       uses: actions/setup-java@v1
+#       with:
+#         java-version: 1.8
+#     - name: Assemble project
+#       run: cd viperServer; sbt assembly
 #     - name: Upload assembled project
 #       uses: actions/upload-artifact@v2
 #       with:
 #         name: viperServer_jar
-#         path: ./
-
-    - name: Install Z3
-      run: sudo apt-get update -y; sudo apt-get install -y z3;
-      
-    - name: test project
-      run: cd viperServer; export Z3_EXE="/usr/bin/z3"; env > print_dir.txt; sbt test
+#         path: ./      
+#     - name: test project
+#       run: cd viperServer; export Z3_EXE="/usr/bin/z3"; env > print_dir.txt; sbt test
       
 #     - name: print directory
 #       run: pwd > print_dir.txt ; ls --recursive >> print_dir.txt ; cat print_dir.txt
+
     - name: print z3
       run: env > print_dir.txt
     - name: Upload directory content printout
