--- a/.github/workflows/scala_ci.yml
+++ b/.github/workflows/scala_ci.yml
@@ -42,7 +42,7 @@ jobs:
       run: cd viperServer; ln --symbolic ../silicon
     
     - name: Install Z3
-      run: sudo apt-get update -y; sudo apt-get install -y z3=4.5.0;
+      run: sudo apt-get update -y; sudo apt-get install -y z3=4.8.8-1;
 
 #     - name: Set up JDK 1.8
 #       uses: actions/setup-java@v1
