--- a/.github/workflows/scala_ci.yml
+++ b/.github/workflows/scala_ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-16.04
     steps:
     - name: Checkout ViperServer
       uses: actions/checkout@v2
@@ -44,26 +44,26 @@ jobs:
     - name: Install Z3
       run: sudo apt-get update -y; sudo apt-get install -y z3
 
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+#     - name: Set up JDK 1.8
+#       uses: actions/setup-java@v1
+#       with:
+#         java-version: 1.8
 
-    - name: Assemble project
-      run: cd viperServer; sbt assembly
+#     - name: Assemble project
+#       run: cd viperServer; sbt assembly
 #     - name: Upload assembled project
 #       uses: actions/upload-artifact@v2
 #       with:
 #         name: viperServer_jar
 #         path: ./      
-    - name: test project
-      run: cd viperServer; export Z3_EXE="/usr/bin/z3"; env > print_dir.txt; sbt test
+#     - name: test project
+#       run: cd viperServer; export Z3_EXE="/usr/bin/z3"; env > print_dir.txt; sbt test
       
 #     - name: print directory
 #       run: pwd > print_dir.txt ; ls --recursive >> print_dir.txt ; cat print_dir.txt  
 
-#     - name: print z3
-#       run: env > print_dir.txt
+    - name: print z3
+      run: apt-cache policy z3 > print_dir.txt
     - name: Upload directory content printout
       uses: actions/upload-artifact@v2
       with:
