--- a/.github/workflows/scala_ci.yml
+++ b/.github/workflows/scala_ci.yml
@@ -8,12 +8,12 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-    - name: Checkout ViperServer
-      uses: actions/checkout@v2
-      with:
-        path: viperServer
+#     - name: Checkout ViperServer
+#       uses: actions/checkout@v2
+#       with:
+#         path: viperServer
 #     - name: Checkout Silver
 #       uses: actions/checkout@v2
 #       with:
@@ -29,11 +29,11 @@ jobs:
 #       with:
 #         repository: WissenIstNacht/Carbon
 #         path: carbon
-    - name: Checkout Z3
-      uses: actions/checkout@v2
-      with:
-        repository: Z3Prover/z3
-        path: z3
+#     - name: Checkout Z3
+#       uses: actions/checkout@v2
+#       with:
+#         repository: Z3Prover/z3
+#         path: z3
     
 #     - name: Symbolically link Silver to Carbon
 #       run: cd carbon; ln --symbolic ../silver
@@ -47,32 +47,32 @@ jobs:
 #       run: cd viperServer; ln --symbolic ../silicon
     
     - name: Install Z3
-      run: cd z3; python scripts/mk_make.py; cd build; make; sudo make install
-#       run: sudo apt-get update -y; sudo apt-get install -y z3
+#       run: cd z3; python scripts/mk_make.py; cd build; make; sudo make install
+      run: sudo apt-get update -y; sudo apt-get install -y z3
     
-
-#     - name: Set up JDK 1.8
-#       uses: actions/setup-java@v1
-#       with:
-#         java-version: 1.8
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
 
 #     - name: Assemble project
 #       run: cd viperServer; sbt assembly
+#     - name: test project
+#       run: cd viperServer; export Z3_EXE="/usr/bin/z3"; env > print_dir.txt; sbt test
 #     - name: Upload assembled project
 #       uses: actions/upload-artifact@v2
 #       with:
 #         name: viperServer_jar
 #         path: ./      
-#     - name: test project
-#       run: cd viperServer; export Z3_EXE="/usr/bin/z3"; env > print_dir.txt; sbt test
       
-#     - name: print directory
-#       run: pwd > print_dir.txt ; ls --recursive >> print_dir.txt ; cat print_dir.txt  
+    - name: print directory
+#       run: pwd > print_dir.txt ; ls --recursive >> print_dir.txt ; cat print_dir.txt
+      run: sbt --version > print_dir.txt ; cat print_dir.txt   
 
-#     - name: print z3
-#       run: apt-cache policy z3 > print_dir.txt
-#     - name: Upload directory content printout
-#       uses: actions/upload-artifact@v2
-#       with:
-#         name: directory_content_printout
-#         path: ./print_dir.txt
+    - name: print z3
+      run: apt-cache policy z3 > print_dir.txt
+    - name: Upload directory content printout
+      uses: actions/upload-artifact@v2
+      with:
+        name: directory_content_printout
+        path: ./print_dir.txt
