--- a/.github/workflows/scala_ci.yml
+++ b/.github/workflows/scala_ci.yml
@@ -46,14 +46,17 @@ jobs:
 #     - name: Symbolically link Silicon to ViperServer
 #       run: cd viperServer; ln --symbolic ../silicon
     
-    - name: Install Z3
+#     - name: Install Z3
 #       run: cd z3; python scripts/mk_make.py; cd build; make; sudo make install
-      run: sudo apt-get update -y; sudo apt-get install -y z3
+#       run: sudo apt-get update -y; sudo apt-get install -y z3
     
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+
+    - name: install SBT
+      run: echo "deb https://dl.bintray.com/sbt/debian /" | sudo tee -a /etc/apt/sources.list.d/sbt.list; curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E40A89B84B2DF73499E82A75642AC823" | sudo apt-key add; sudo apt-get update; sudo apt-get install sbt
 
 #     - name: Assemble project
 #       run: cd viperServer; sbt assembly
