--- a/.github/workflows/scala_ci.yml
+++ b/.github/workflows/scala_ci.yml
@@ -10,45 +10,45 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-#     - name: Checkout ViperServer
-#       uses: actions/checkout@v2
-#       with:
-#         path: viperServer
-#     - name: Checkout Silver
-#       uses: actions/checkout@v2
-#       with:
-#         repository: WissenIstNacht/Silver
-#         path: silver
-#     - name: Checkout Silicon
-#       uses: actions/checkout@v2
-#       with:
-#         repository: WissenIstNacht/Silicon
-#         path: silicon
-#     - name: Checkout Carbon
-#       uses: actions/checkout@v2
-#       with:
-#         repository: WissenIstNacht/Carbon
-#         path: carbon
-#     - name: Checkout Z3
-#       uses: actions/checkout@v2
-#       with:
-#         repository: Z3Prover/z3
-#         path: z3
+    - name: Checkout ViperServer
+      uses: actions/checkout@v2
+      with:
+        path: viperServer
+    - name: Checkout Silver
+      uses: actions/checkout@v2
+      with:
+        repository: WissenIstNacht/Silver
+        path: silver
+    - name: Checkout Silicon
+      uses: actions/checkout@v2
+      with:
+        repository: WissenIstNacht/Silicon
+        path: silicon
+    - name: Checkout Carbon
+      uses: actions/checkout@v2
+      with:
+        repository: WissenIstNacht/Carbon
+        path: carbon
+    - name: Checkout Z3
+      uses: actions/checkout@v2
+      with:
+        repository: Z3Prover/z3
+        path: z3
     
-#     - name: Symbolically link Silver to Carbon
-#       run: cd carbon; ln --symbolic ../silver
-#     - name: Symbolically link Silver to Silicon
-#       run: cd silicon; ln --symbolic ../silver
-#     - name: Symbolically link Silver to ViperServer
-#       run: cd viperServer; ln --symbolic ../silver
-#     - name: Symbolically link Carbon to ViperServer
-#       run: cd viperServer; ln --symbolic ../carbon
-#     - name: Symbolically link Silicon to ViperServer
-#       run: cd viperServer; ln --symbolic ../silicon
+    - name: Symbolically link Silver to Carbon
+      run: cd carbon; ln --symbolic ../silver
+    - name: Symbolically link Silver to Silicon
+      run: cd silicon; ln --symbolic ../silver
+    - name: Symbolically link Silver to ViperServer
+      run: cd viperServer; ln --symbolic ../silver
+    - name: Symbolically link Carbon to ViperServer
+      run: cd viperServer; ln --symbolic ../carbon
+    - name: Symbolically link Silicon to ViperServer
+      run: cd viperServer; ln --symbolic ../silicon
     
-#     - name: Install Z3
+    - name: Install Z3
 #       run: cd z3; python scripts/mk_make.py; cd build; make; sudo make install
-#       run: sudo apt-get update -y; sudo apt-get install -y z3
+      run: sudo apt-get update -y; sudo apt-get install -y z3
     
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
@@ -58,24 +58,24 @@ jobs:
     - name: install SBT
       run: echo "deb https://dl.bintray.com/sbt/debian /" | sudo tee -a /etc/apt/sources.list.d/sbt.list; curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E40A89B84B2DF73499E82A75642AC823" | sudo apt-key add; sudo apt-get update; sudo apt-get install sbt
 
-#     - name: Assemble project
-#       run: cd viperServer; sbt assembly
-#     - name: test project
-#       run: cd viperServer; export Z3_EXE="/usr/bin/z3"; env > print_dir.txt; sbt test
+    - name: Assemble project
+      run: cd viperServer; sbt assembly
+    - name: test project
+      run: cd viperServer; export Z3_EXE="/usr/bin/z3"; env > print_dir.txt; sbt test
 #     - name: Upload assembled project
 #       uses: actions/upload-artifact@v2
 #       with:
 #         name: viperServer_jar
 #         path: ./      
       
-    - name: print directory
+#     - name: print directory
 #       run: pwd > print_dir.txt ; ls --recursive >> print_dir.txt ; cat print_dir.txt
-      run: sbt --version > print_dir.txt ; cat print_dir.txt   
+#       run: sbt --version > print_dir.txt ; cat print_dir.txt   
 
-    - name: print z3
-      run: apt-cache policy z3 > print_dir.txt
-    - name: Upload directory content printout
-      uses: actions/upload-artifact@v2
-      with:
-        name: directory_content_printout
-        path: ./print_dir.txt
+#     - name: print z3
+#       run: apt-cache policy z3 > print_dir.txt
+#     - name: Upload directory content printout
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: directory_content_printout
+#         path: ./print_dir.txt
